@@ -55,6 +55,7 @@ Dmitry Mikhin		dmitrym@acres.com.au
 Doug Evans		devans@cygnus.com
 Duncan Gibson		duncan@thermal.esa.int
 Eleftherios Gkioulekas	lf@amath.washington.edu
+Elena A. Vengerova	helen@oktetlabs.ru
 Elmar Hoffmann		elho@elho.net
 Elrond			Elrond@Wunder-Nett.org
 Enrico Scholz		enrico.scholz@informatik.tu-chemnitz.de
