@@ -120,6 +120,7 @@ cond30.test \
 cond31.test \
 cond32.test \
 cond33.test \
+cond34.test \
 condd.test \
 condinc.test \
 condinc2.test \
